fix css on resources page to have bigger desktop gap & not highlight links

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -297,7 +297,7 @@ footer {
 	.portfolio {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
-		gap: 10px;
+		gap: 50px;
 		grid-auto-rows: minmax(200px, auto);
 	}
 
